--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Mouse Mousekewitz
+title: Jaakko Timonen
 description: This is Mouse Mousekewitz' homepage.
 show_downloads: true
 google_analytics:
